test/langtools/tools/javac/valhalla/lworld-values/CheckClone.out
CheckClone.java:11:21: compiler.err.primitive.class.does.not.support: clone
CheckClone.java:12:18: compiler.err.primitive.class.does.not.support: clone
CheckClone.java:16:16: compiler.err.primitive.class.does.not.support: clone
CheckClone.java:17:14: compiler.err.primitive.class.does.not.support: clone
CheckClone.java:20:22: compiler.err.primitive.class.may.not.override: clone
5 errors
